[gd_scene load_steps=15 format=3 uid="uid://dn3mlxc1nso7f"]

[ext_resource type="Script" path="res://scripts/settings_screen.gd" id="1_6lyn8"]
[ext_resource type="Texture2D" uid="uid://v4xwj6jaivwn" path="res://art/30.sep/Drone_Fly/Drone_Fly_00000.png" id="2_3hyk2"]
[ext_resource type="Texture2D" uid="uid://bulita8o26en8" path="res://art/12_nov/new_chars/Girl/Seq - Idle/Girl - Idle_00000.png" id="4_wdu1k"]
[ext_resource type="Texture2D" uid="uid://oq4srcmpctv2" path="res://art/12_nov/new_chars/Boy/Seq - Idle/Boy - Idle_00000.png" id="5_04kmg"]
[ext_resource type="Texture2D" uid="uid://ccfnrfyq44m7y" path="res://art/18_dec/NewChars/Aria_Girl - Idle/Aria_Girl - Idle_00000.png" id="5_7jdt1"]
[ext_resource type="Texture2D" uid="uid://01tbwodyjvqo" path="res://art/18_dec/NewChars/Echo_Boy - Idle/Echo_Boy - Idle_00000.png" id="5_xufhg"]
[ext_resource type="Texture2D" uid="uid://crysnh301nfcw" path="res://art/18_dec/NewChars/Growl_Boy - Idle/Growl_Boy - Idle_00000.png" id="6_dvc1n"]
[ext_resource type="Script" path="res://scripts/settings_manager.gd" id="9_7271b"]

[sub_resource type="Theme" id="Theme_w463u"]
default_font_size = 70

[sub_resource type="Gradient" id="Gradient_r8luk"]
offsets = PackedFloat32Array(0, 0.00744417)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fs6dw"]
gradient = SubResource("Gradient_r8luk")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gm4g5"]
bg_color = Color(0.36624, 0.00156877, 0.638228, 1)

[sub_resource type="Gradient" id="Gradient_ou8bn"]
offsets = PackedFloat32Array(0, 0.00744417)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_brcr1"]
gradient = SubResource("Gradient_ou8bn")

[node name="SettingsScreen" type="Window"]
title = "הגדרות"
initial_position = 1
size = Vector2i(440, 800)
script = ExtResource("1_6lyn8")
song_1_path = "res://audio/IJustCantWaitToBeKing_CMajor_76bpm.ogg"
song_1_slow_song_path = "res://audio/IJustCantWaitToBeKing_CMajor_76bpm_SLOW70.ogg"
song_1_melody_path = "res://levels/IJustCantWaitToBeKing_76_Right.txt"
song_1_easy_path = "res://audio/IJustCantWaitToBeKing_CMajor_70bpm.ogg"
song_1_easy_slow_song_path = "res://audio/IJustCantWaitToBeKing_CMajor_70bpm_SLOW70.ogg"
song_1_easy_melody_path = "res://levels/IJustCantWaitToBeKingEasy_70_Right.txt"
song_1_hard_melody_path = "res://levels/IJustCantWaitToBeKingHard_76_Right.txt"
song_2_path = "res://audio/CircleOfLife_78_longer.ogg"
song_2_slow_song_path = "res://audio/CircleOfLife_78_longer_SLOW70.ogg"
song_2_melody_path = "res://levels/CircleOfLifeLonger_TheLionKing_78.txt"
song_2_easy_melody_path = "res://levels/CircleOfLifeEasyLonger_TheLionKing_78.txt"
song_2_hard_melody_path = "res://levels/CircleOfLifeHardLonger_TheLionKing_78.txt"
song_3_song_path = "res://audio/LetItGo_Aminor_106.ogg"
song_3_slow_song_path = "res://audio/LetItGo_Aminor_106_SLOW70.ogg"
song_3_melody_path = "res://levels/LetItGoSimplified_106_Right.txt"
song_3_hard_melody_path = "res://levels/LetItGoSimplifiedHard_106_Right.txt"
song_4_song_path = "res://audio/HokeyPokeySong_FMajor_88bpm_Short.ogg"
song_4_slow_song_path = "res://audio/HokeyPokeySong_FMajor_88bpm_Short_SLOW70.ogg"
song_4_melody_path = "res://levels/HokeyPokey_88_Right.txt"
song_4_hard_melody_path = "res://levels/HokeyPokeyHard_88_Right.txt"
song_5_song_path = "res://audio/FreeFallin_155bpm_Vocals.ogg"
song_5_slow_song_path = "res://audio/FreeFallin_155bpm_Vocals_SLOW70.ogg"
song_5_melody_path = "res://levels/FreeFallin_155_Right.txt"
song_5_hard_melody_path = "res://levels/FreeFallinHard_155_Right.txt"
song_6_song_path = "res://audio/DanceMonkey_85.ogg"
song_6_slow_song_path = "res://audio/DanceMonkey_85_SLOW70.ogg"
song_6_melody_path = "res://levels/DanceMonkey_85_Right.txt"
song_6_left_melody_path = "res://levels/DanceMonkey_85_Left.txt"
song_6_left_hard_melody_path = "res://levels/DanceMonkeyHard_85_Left.txt"
song_7_song_path = "res://audio/Pokemon_CMajor_115bpm_Short.ogg"
song_7_slow_song_path = "res://audio/Pokemon_CMajor_115bpm_Short_SLOW70.ogg"
song_7_melody_path = "res://levels/Pokemon_115_Right.txt"
song_7_left_melody_path = "res://levels/Pokemon_115_Left.txt"
song_7_left_hard_melody_path = "res://levels/PokemonHard_115_Left.txt"
song_8_song_path = "res://audio/Believer_ImagineDragons_110bpm_Vocals_Kids.ogg"
song_8_slow_song_path = "res://audio/Believer_ImagineDragons_110bpm_Vocals_Kids_SLOW70.ogg"
song_8_melody_path = "res://levels/Believer_110_Right.txt"
song_8_left_melody_path = "res://levels/Believer_110_Left.txt"
song_9_song_path = "res://audio/JingleBells_88.ogg"
song_9_slow_song_path = "res://audio/JingleBells_88_SLOW70.ogg"
song_9_melody_path = "res://levels/JingleBells_Right.txt"
song_9_left_melody_path = "res://levels/JingleBells_Left.txt"
song_9_hard_melody_path = "res://levels/JingleBellsHard_Right.txt"
song_9_left_hard_melody_path = "res://levels/JingleBellsHard_Left.txt"
song_10_song_path = "res://audio/LetItMarch - No Lead.ogg"
song_10_slow_song_path = "res://audio/LetItMarch - No Lead_SLOW70.ogg"
song_10_melody_path = "res://levels/LetItGoSimplified_106_Right.txt"
song_10_hard_melody_path = "res://levels/LetItGoSimplifiedHard_106_Right.txt"
song_11_song_path = "res://audio/IJustCantWaitToBeTechno -No Lead.ogg"
song_11_slow_song_path = "res://audio/IJustCantWaitToBeTechno -No Lead_SLOW70.ogg"
song_11_melody_path = "res://levels/CircleOfLifeLonger_TheLionKing_78.txt"
song_11_hard_melody_path = "res://levels/CircleOfLifeHardLonger_TheLionKing_78.txt"

[node name="UI" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.099995, 0.000124538, 0.274777, 1)
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="UI"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.0
offset_top = -1.0
offset_right = 256.0
offset_bottom = 95.0
grow_horizontal = 2
theme = SubResource("Theme_w463u")
text = "בחרו שיר"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Drone" type="TextureRect" parent="UI"]
visible = false
offset_left = -2.0
offset_top = 97.0
offset_right = 631.0
offset_bottom = 620.0
mouse_filter = 2
texture = ExtResource("2_3hyk2")
metadata/_edit_lock_ = true

[node name="LoadOverlay" type="TextureRect" parent="UI"]
process_mode = 3
visible = false
self_modulate = Color(1, 1, 1, 0.686275)
top_level = true
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_fs6dw")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="UI/LoadOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = -143.0
offset_right = 310.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gm4g5")

[node name="Label" type="Label" parent="UI/LoadOverlay/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -68.0
offset_right = 190.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 60
text = "טוען"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Darken" type="TextureRect" parent="UI"]
process_mode = 3
visible = false
self_modulate = Color(1, 1, 1, 0.835294)
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_brcr1")
metadata/_edit_lock_ = true

[node name="DevButtons" type="Control" parent="UI"]
layout_mode = 3
anchor_left = 0.660169
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="AutoPlayToggle" type="CheckButton" parent="UI/DevButtons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -242.0
offset_top = 86.0
offset_right = -120.0
offset_bottom = 117.0
grow_horizontal = 0
scale = Vector2(1.99, 1.99)
text = "Auto Play"
icon_alignment = 2
expand_icon = true

[node name="Label" type="Label" parent="UI/DevButtons/AutoPlayToggle"]
visible = false
layout_mode = 0
offset_left = -10.0
offset_top = 20.0
offset_right = 64.0
offset_bottom = 43.0
text = "Auto Play"

[node name="Skip Intro" type="CheckButton" parent="UI/DevButtons"]
layout_direction = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -244.0
offset_top = 152.0
offset_right = -121.0
offset_bottom = 183.0
grow_horizontal = 0
scale = Vector2(1.99, 1.99)
text = "Skip Intro"
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/DevButtons/Skip Intro"]
visible = false
layout_mode = 0
offset_left = -10.0
offset_top = 20.0
offset_right = 64.0
offset_bottom = 43.0
text = "Skip Intro"

[node name="SkipMiddleC" type="CheckButton" parent="UI/DevButtons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -303.0
offset_top = 220.0
offset_right = -151.0
offset_bottom = 251.0
grow_horizontal = 0
scale = Vector2(1.99, 1.99)
text = "Skip Middle C"
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/DevButtons/SkipMiddleC"]
visible = false
layout_mode = 0
offset_left = -10.0
offset_top = 20.0
offset_right = 64.0
offset_bottom = 43.0
text = "Skip Middle C"

[node name="DebugToggle" type="CheckButton" parent="UI/DevButtons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -197.0
offset_top = 282.0
offset_right = -99.0
offset_bottom = 313.0
grow_horizontal = 0
scale = Vector2(1.99, 1.99)
text = "Debug"
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/DevButtons/DebugToggle"]
visible = false
layout_mode = 0
offset_left = -10.0
offset_top = 20.0
offset_right = 64.0
offset_bottom = 43.0
text = "Debug"

[node name="New Stars" type="CheckButton" parent="UI/DevButtons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -254.73
offset_top = 343.17
offset_right = -127.73
offset_bottom = 374.17
grow_horizontal = 0
scale = Vector2(1.99, 1.99)
text = "New Stars
"
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/DevButtons/New Stars"]
visible = false
layout_mode = 0
offset_left = -10.0
offset_top = 20.0
offset_right = 64.0
offset_bottom = 43.0
text = "Debug"

[node name="SPToggle" type="CheckButton" parent="UI/DevButtons"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -232.0
offset_top = 343.0
offset_right = -117.0
offset_bottom = 374.0
grow_horizontal = 0
scale = Vector2(1.99, 1.99)
text = "SP Mode
"
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/DevButtons/SPToggle"]
visible = false
layout_mode = 0
offset_left = -10.0
offset_top = 20.0
offset_right = 64.0
offset_bottom = 43.0
text = "Debug"

[node name="Play Piano" type="CheckButton" parent="UI/DevButtons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -232.0
offset_top = 403.17
offset_right = -117.0
offset_bottom = 434.17
grow_horizontal = 0
scale = Vector2(1.99, 1.99)
text = "Play Piano"
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/DevButtons/Play Piano"]
visible = false
layout_mode = 0
offset_left = -10.0
offset_top = 20.0
offset_right = 64.0
offset_bottom = 43.0

[node name="BoyGirlToggle" type="CheckButton" parent="UI/DevButtons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -261.28
offset_top = 455.49
offset_right = -126.28
offset_bottom = 486.49
grow_horizontal = 0
scale = Vector2(1.99, 1.99)
text = "Boys / Girls"
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/DevButtons/BoyGirlToggle"]
visible = false
layout_mode = 0
offset_left = -10.0
offset_top = 20.0
offset_right = 64.0
offset_bottom = 43.0

[node name="BossToggle" type="CheckButton" parent="UI/DevButtons"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -245.0
offset_top = 349.0
offset_right = -122.0
offset_bottom = 380.0
grow_horizontal = 0
scale = Vector2(1.99, 1.99)
text = "New Boss"
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI/DevButtons/BossToggle"]
visible = false
layout_mode = 0
offset_left = -10.0
offset_top = 20.0
offset_right = 64.0
offset_bottom = 43.0
text = "New Boss
"

[node name="ShowLibraryToggle" type="CheckButton" parent="UI/DevButtons"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -305.0
offset_top = 597.0
offset_right = -152.0
offset_bottom = 628.0
grow_horizontal = 0
scale = Vector2(1.99, 1.99)
text = "Library Songs"
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/DevButtons/ShowLibraryToggle"]
visible = false
layout_mode = 0
offset_left = -42.0
offset_top = 20.0
offset_right = 37.0
offset_bottom = 95.0
text = "Show Library Songs"
autowrap_mode = 3

[node name="LibrarySongToggle" type="CheckButton" parent="UI/DevButtons"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_bottom = 24.0
grow_horizontal = 0
scale = Vector2(1.99, 1.99)
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/DevButtons/LibrarySongToggle"]
layout_mode = 0
offset_left = -50.9485
offset_top = 19.5122
offset_right = 46.0515
offset_bottom = 42.5122
text = "Library Song"

[node name="CharacterSelection" type="OptionButton" parent="UI/DevButtons"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -410.806
offset_top = -350.0
offset_right = -20.8057
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 36
alignment = 2
expand_icon = true
selected = 0
item_count = 2
popup/item_0/text = "Girl"
popup/item_0/icon = ExtResource("4_wdu1k")
popup/item_1/text = "Boy"
popup/item_1/icon = ExtResource("5_04kmg")
popup/item_1/id = 1

[node name="GirlSelection" type="OptionButton" parent="UI/DevButtons"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -410.806
offset_top = -350.0
offset_right = -20.8057
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 36
alignment = 2
expand_icon = true
selected = 0
item_count = 2
popup/item_0/text = "Lyric"
popup/item_0/icon = ExtResource("4_wdu1k")
popup/item_1/text = "Aria"
popup/item_1/icon = ExtResource("5_7jdt1")

[node name="BoySelection" type="OptionButton" parent="UI/DevButtons"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -410.806
offset_top = -350.0
offset_right = -20.8057
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 36
alignment = 2
expand_icon = true
selected = 0
item_count = 2
popup/item_0/text = "Echo"
popup/item_0/icon = ExtResource("5_xufhg")
popup/item_1/text = "Growl"
popup/item_1/icon = ExtResource("6_dvc1n")

[node name="SettingsManager" type="Node" parent="."]
script = ExtResource("9_7271b")

[connection signal="toggled" from="UI/DevButtons/AutoPlayToggle" to="." method="_on_auto_play_toggle_toggled"]
[connection signal="toggled" from="UI/DevButtons/Skip Intro" to="." method="_on_skip_intro_toggled"]
[connection signal="toggled" from="UI/DevButtons/SkipMiddleC" to="." method="_on_skip_middle_c_toggled"]
[connection signal="toggled" from="UI/DevButtons/DebugToggle" to="." method="_on_debug_toggle_toggled"]
[connection signal="toggled" from="UI/DevButtons/New Stars" to="." method="_on_new_stars_toggled"]
[connection signal="toggled" from="UI/DevButtons/SPToggle" to="." method="_on_sp_toggle_toggled"]
[connection signal="toggled" from="UI/DevButtons/Play Piano" to="." method="_on_play_piano_toggled"]
[connection signal="toggled" from="UI/DevButtons/BoyGirlToggle" to="." method="_on_boy_girl_toggle_toggled"]
[connection signal="toggled" from="UI/DevButtons/BossToggle" to="." method="_on_boss_toggle_toggled"]
[connection signal="toggled" from="UI/DevButtons/ShowLibraryToggle" to="." method="_on_show_library_toggle_toggled"]
[connection signal="toggled" from="UI/DevButtons/LibrarySongToggle" to="." method="_on_library_song_toggled"]
[connection signal="item_selected" from="UI/DevButtons/GirlSelection" to="." method="choose_character"]
[connection signal="item_selected" from="UI/DevButtons/BoySelection" to="." method="choose_character"]
